<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/rf_cali_test_sn_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/sn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/rf_cali_test_calibration_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/calibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/rf_cali_test_comprehensive_test_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/comprehensive_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/test_button_padding"
        android:gravity="bottom" >

        <Button
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pass" />

        <Button
            android:id="@+id/fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fail" />
    </LinearLayout>

</LinearLayout>